src/test/deca/syntax/invalid/without_class/main_with_block.deca
// Description:
//    Error in main block   
//
// Result:
//    Syntax error
//    line 10

{
     int i = 0;
    {
        int j = 1;
    }

    return i;
}